fixed z-index bug

--- a/src/css/SnippetView.css
+++ b/src/css/SnippetView.css
@@ -14,6 +14,9 @@
   width: 6rem;
 }
 
+
+/*transform: scale(0.7, 0.7) translate(-5vw, -5vw);*/
+
 /*Stack styles*/
 #viewport {
   margin: auto;
@@ -24,9 +27,11 @@
   height: 400px;
   position: relative;
   margin: 10% auto;
+  z-index: 1;
 }
 
 #viewport .card {
+  /*transform: translate(calc(100px - 18vw), calc(100px - 18vw));*/
   width: 30rem;
   height: 400px;
   list-style: none;
@@ -44,7 +49,6 @@
   background-size: 100% 100%;
   box-sizing: border-box;
   cursor: default;
-  z-index: 1;
 }
 
 #viewport .clubs,
@@ -85,10 +89,10 @@
   line-height: 1.6;
 }
 
-
 .stack-button {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  z-index: -1;
 }
